[package]
name = "const-bounded-collections"
version = "0.8.0"
license = "CC0-1.0"
authors = ["Denys Zadorozhnyi <denys@zadorozhnyi.com>"]
edition = "2024"
description = "Rust Vec wrapper with type guarantees on lower and upper bounds for items quantity."
repository = "https://github.com/n1xyz/const-bounded-collections"

[dependencies]
serde = { version = "1.0.123", default-features = false, features = [
    "alloc",
    "derive",
], optional = true }
schemars = { version = "1", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }
proptest = { version = "1.7", optional = true }
borsh = { version = "1.5.7", default-features = false, features = ["unstable__schema"], optional = true}

[features]
serde = ["dep:serde"]
schema = ["serde", "dep:schemars"]
arbitrary = ["proptest"]
borsh = ["dep:borsh"]
nightly = []

[dev-dependencies]
proptest = { version = "1.7" }
serde_json = { version = "1.0", default-features = false, features = ["std"]}